[package]
name = "hoard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
jsonrpsee-http-server = "0.15.1"
tokio = {vertsion = "1", features = ["full"]}
url = "2.2.2"
